<resources>
    <string name="app_name">SpinnerAutoMultiCompleteTextView</string>
    <string name="exit">Выход</string>
    <string name="text_name_TV">Имя</string>
    <string name="text_last_name_TV">Фамилия</string>
    <string name="text_age_TV">Возраст</string>
    <string name="text_position_TV">Должность</string>
    <string name="text_enter_name_ET">Введите Имя</string>
    <string name="text_enter_last_name_ET">Введите Фамилию</string>
    <string name="text_enter_age_ET">Введите возраст</string>
    <string name="text_save_BTN">Сохранить</string>
</resources>