<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="@dimen/_10dp"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/text_name_TV"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/text_last_name_TV"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/text_age_TV"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/text_position_TV"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="@dimen/_250dp"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/text_enter_name_ET"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp" />

        <EditText
            android:id="@+id/lastNameET"
            android:layout_width="@dimen/_250dp"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/text_enter_last_name_ET"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp" />

        <EditText
            android:id="@+id/ageET"
            android:layout_width="@dimen/_250dp"
            android:layout_row="2"
            android:layout_column="1"
            android:hint="@string/text_enter_age_ET"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp" />

        <Spinner
            android:id="@+id/positionSP"
            android:layout_width="@dimen/_250dp"
            android:layout_row="3"
            android:layout_column="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp" />

    </GridLayout>

    <ListView
        android:padding="@dimen/_10dp"
        android:id="@+id/listViewLV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintBottom_toTopOf="@+id/saveBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_save_BTN"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>