<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10dp"
            android:orientation="horizontal">


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:columnCount="2"
                android:orientation="vertical"
                android:rowCount="2">

                <TextView
                    android:id="@+id/listNameTV"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:hint="@string/text_name_TV"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/listPositionTV"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:hint="@string/text_position_TV"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:id="@+id/listLastNameTV"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:hint="@string/text_last_name_TV"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/listAgeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:hint="@string/text_age_TV"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp" />

            </GridLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>